# LexStop2LAnalysis

./: .gitignore  CMakeLists.txt  README.md  README.txt
LexStop2LAnalysis/: TreeHelper.h  addFakeFactor.h  makeFlatNtuples.h
Root/: LinkDef.h  empty_file.cxx
bash/: add_to_path.sh  add_to_python_path.sh  get_available_DSIDs.sh  get_available_mc16_SUMWs.sh  git_check.sh  run_flatnt_tests.sh  run_grid_tests.sh  run_susynt_tests.sh  setup_area.sh  setup_env.sh  setup_env_vars.sh
data/: fakeFactorDummy.root  fakeFactorHists.root  makeDummyFakeFactor.cxx
notes/: common_bash_commands.sh  failed_condor_jobs.txt  missing_n0306_samples.txt  samples_to_split.txt  split_samples_over_1M_events.txt  workflow.txt
python/: IFFTruthClassifierDefs.py  analysis_DSIDs.py  check_for_expected_samples.py  check_for_failed_samples.py  fake_factor_plot_looper.py  fake_yield_looper.py  mainPlotConf.py  mainPlotLooper.py  makeDummyFakeFactor.cxx  make_dsid_list.py  plotify_condor_summary_csv.py  summarize_condor_job_info.py
test/: test_addFakeFactor.cxx  test_addFakeFactor.sh
util/: SuperflowAnaStop2L.cxx  addFakeFactor.cxx  makeFlatNtuples.cxx
